// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignInPage component > render 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign in
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value=""
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value=""
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign in
    </button>
    <p>
      Don't have an account? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-up"
      >
        Sign up.
      </a>
    </p>
  </form>
</div>
`;

exports[`SignInPage component > submit with valid username and password, redirect as expected 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign in
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@gmail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign in
    </button>
    <p>
      Don't have an account? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-up"
      >
        Sign up.
      </a>
    </p>
    <p
      class="text-green-600"
    >
      Signing in proceeded successfully.
    </p>
  </form>
</div>
`;

exports[`SignInPage component > submit with valid username and password, redirect as expected 2`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign in
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@gmail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign in
    </button>
    <p>
      Don't have an account? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-up"
      >
        Sign up.
      </a>
    </p>
    <p
      class="text-green-600"
    >
      Signing in proceeded successfully.
    </p>
  </form>
</div>
`;

exports[`SignInPage component > submit, 'Invalid email or password.' error thrown, message matching /invalid email or password/i shown 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign in
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@gmail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="invalidpasswd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign in
    </button>
    <p>
      Don't have an account? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-up"
      >
        Sign up.
      </a>
    </p>
    <p
      class="text-red-600"
    >
      Invalid email or password.
    </p>
  </form>
</div>
`;

exports[`SignInPage component > submit, 'Network error.' error thrown, message matching /unable to process the request/i shown 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign in
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@gmail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="invalidpasswd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign in
    </button>
    <p>
      Don't have an account? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-up"
      >
        Sign up.
      </a>
    </p>
    <p
      class="text-red-600"
    >
      Unable to process the request. Try again later.
    </p>
  </form>
</div>
`;

exports[`SignInPage component > type email and password, inputs change 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign in
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@gmail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign in
    </button>
    <p>
      Don't have an account? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-up"
      >
        Sign up.
      </a>
    </p>
  </form>
</div>
`;
